# Cuckooland

./: .gitignore  CMakeLists.txt  README.md  readme.txt
assets/models/: barrel.glb  bell.glb  cardboard_box1.glb  cardboard_box2.glb  cardboard_box3.glb  cardboard_box4.glb  chair.glb  cube.glb  cuckoo.glb  cuckoo.p.glb  dryer.glb  elevator_base.glb  elevator_base.p.glb  elevator_shaft.glb  elevator_shaft.p.glb  fire_door.glb  fire_door.p.glb  ladder.glb  map.glb  matterman.glb  matterman.p.glb  plank.glb  plank2.glb  skybox.glb  table.glb  tech_door.glb  testmap.glb  v_matman.glb
assets/shaders/: pbr.fs  pbr.vs
assets/textures/pbr/: 2.mtz  223.mtz  241.mtz  243.mtz  245.mtz  267.mtz  271.mtz  287.mtz  4.mtz  8.mtz  80.mtz  dryer.mtz  matterman.mtz
sources/: datamodel.cpp  datamodel.h  flavor.h  game.cpp  game.h  globals.cpp  globals.h  interpolation.cpp  interpolation.h  lighting.cpp  lighting.h  main.cpp  physics.cpp  physics.h  resources.cpp  resources.h  tween.h
sources/assets/: matterman.blend  testmap.blend  testmap.glb
sources/engine/: datamodel.cpp  datamodel.h  entity.h  physics.cpp  physics.h
sources/entities/: Barrier.h  Checkpoint.cpp  Checkpoint.h  Cuckoo.cpp  Cuckoo.h  Door.cpp  Door.h  Elevator.cpp  Elevator.h  Hud.cpp  Hud.h  Intro.cpp  Intro.h  Map.cpp  Map.h  MatterMan.cpp  MatterMan.h  MatterManPickup.cpp  MatterManPickup.h  Player.cpp  Player.h  Prop.cpp  Prop.h  Skybox.h  SlidingDoor.cpp  SlidingDoor.h  SoundPlayer.h  Timer.h  Trigger.cpp  Trigger.h  Void.cpp  Void.h
sources/entities/Levels/: MainLevel.h  TestLevel.h
